    - More locale fixes
    - Fixed cost of underground belts/pipes (was double what it should have been)
    - Fix that, in the rare case Foundation snaps to clip into another Foundation, both would be immovable
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 2021.06.17
  Optimisations:
    - Greatly reduced processing time of Radioactivity. If it's still too much, use /toggle-radiation command to disable radiation in-game.
    - Reworked power production buildings.
  Ease of use:
    - Tabs for composite entities (Truck Station, Drone Port) now disable themselves if you are out of range of that component
    - You must now Shift-click to trash equipment, so you don't accidentally trash it when you meant to equip it.
---------------------------------------------------------------------------------------------------
Version: 0.6.8
Date: 2021.06.17
  Changes:
    - Renamed various creature entities to their Satisfactory equivalents
    - Reduced the amount of time for Resource Scanner pings to respond
  Balancing:
    - Decreased mining time of resource deposits
  Combat Balancing:
    - Further reduced the amount of enemies at resource nodes close to your spawn point.
    - Some nodes may even be totally undefended.
  Bugfixes:
    - Fixed train station not appearing on map
    - Fixed buggy Tips+Tricks
---------------------------------------------------------------------------------------------------
Version: 0.6.9
Date: ????
  Changes:
    - Changed stack size of underground belts to 50 for better fit with Build Gun
    - Truck stations and Freight platforms now have their outputs disabled as well as their inputs when a vehicle is docked
  Ease of use:
    - Reduced the number of batteries needed for Drones to take off, based on calculated requirement
    - Added "out of fuel" notice to Drones, just in case
  Balancing:
    - Slightly increased length of underground pipe Mk.2